formatを実行
